--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -8,7 +8,7 @@
   <p style="color: red;"><%= flash[:alert] %></p>
 <% end %>
 
-<%= form_with model: @country, local: true do |f| %>
+<%= form_with model: @country, data: { turbo: false } do |f| %>
   <div>
     <%= f.label :name, "Name:" %>
     <%= f.text_field :name %>
